# pix2struct

./: README.md  pyproject.toml  setup.py
.github/workflows/: pytest_and_autopublish.yml
pix2struct/: __init__.py  demo.py  demo_utils.py  example_inference.py  inference_utils.py  metrics.py  metrics_test.py  models.py  models_test.py  postprocessors.py  preprocessors.py  preprocessors_test.py  tasks.py  transfer_utils.py
pix2struct/configs/init/: pix2struct_base_init.gin  pix2struct_large_init.gin  random_init.gin  warmup_base_init.gin  warmup_large_init.gin
pix2struct/configs/models/: pix2struct.gin  t5_1_1_flaxformer.gin
pix2struct/configs/optimizers/: adafactor.gin
pix2struct/configs/runs/: __init__.py  eval.gin  inference.gin  train.gin
pix2struct/configs/schedules/: __init__.py  ai2d.gin  chartqa.gin  docvqa.gin  infographicvqa.gin  ocrvqa.gin  refexp.gin  screen2words.gin  textcaps.gin  widget_captioning.gin
pix2struct/configs/sizes/: base.gin  large.gin  tiny.gin
pix2struct/preprocessing/: __init__.py  convert_ai2d.py  convert_chartqa.py  convert_docvqa.py  convert_ocrvqa.py  convert_refexp.py  convert_screen2words.py  convert_textcaps.py  convert_widget_captioning.py  preprocessing_utils.py
pix2struct/web/static/: style.css
pix2struct/web/templates/: demo_screenshot.html
